--- a/pages/template.html
+++ b/pages/template.html
@@ -7,9 +7,8 @@
   <title>IT Project Management Knowledge Areas</title>
 
   <link rel="stylesheet" type="text/css" href="./styles/default.css">
-  <link rel="stylesheet" type="text/css" href="./styles/home.css">
 
-  <script defer src="script.js"></script>
+  <script defer src="scripts/search.js"></script>
 </head>
 <body>
   <header>
@@ -21,24 +20,17 @@
     </form>
   </header>
 
-  
-
   <main>
-    <section class="search-results">
-      <h3 class="search-results"></h3>
-      <div class="search-results"></div>
-    </section>
+    <h2>Article Title</h2>
 
-    <section class="all-articles">
-      <h2>All Articles</h2>
-      <div class="all-articles"></div>
-    </section>
+    <!--<img src="./images/article-img">-->
+
+    <p></p>
+    <p></p>
   </main>
 
-  <span class="homepage-flag"></span>
   <footer>
     Daniel Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
   </footer>
-
 </body>
 </html>
