--- a/pages/template.html
+++ b/pages/template.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>IT Project Management Knowledge Areas</title>
 
-  <link rel="stylesheet" type="text/css" href="./styles/default.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="../styles/default.css">
 
   <script defer src="scripts/search.js"></script>
 </head>
