article main content margin

--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -8,6 +8,7 @@
   
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../styles/default.css">
+  <link rel="stylesheet" type="text/css" href="../styles/article.css">
 
 
   <script defer src="scripts/search.js"></script>
@@ -24,6 +25,7 @@
 
   <main>
     <h2>The 12 Principles of Agile Development</h2>
+    <p>Written by: Kaleb Dean</p>
 
     <img src="../images/12-agile-principles.png">
 
