Added User Story 3 - Daniel Cisneros Siliezar

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
   <span class="homepage-flag"></span>
   <footer>
-    Daniel Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
+    Daniel Cisneros Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
   </footer>
 
 </body>
