--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -219,7 +219,7 @@
   </main>
 
   <footer>
-    Daniel Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
+    Daniel Cisneros Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
   </footer>
 </body>
 </html>
