Adding resources for User Story 3

--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -73,6 +73,13 @@
     <p>
         Agile has its pros and cons that vary between projects. It is imperative that organizations and teams are aware of when to utilize Agile methodologies to complete projects, as it can lead to a better product all around or potentially ruin the final product based on given requirements.
     </p>
+    <section className="resources">
+      <h3>Resources</h3>
+      <ul>
+        <li><a href="https://hygger.io/blog/when-not-to-use-agile/">hygger - When to not use Agile</a></li>
+        <li><a href="https://www.h2kinfosys.com/blog/when-not-to-use-agile/ ">h2kinfosys -When to not use Agile</a></li>
+      </ul>
+    </section>
   </main>
 
   <footer>
