Changing image for User Story 3

--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -25,7 +25,7 @@
     <h2>When to Use or Not Use Agile</h2>
     <p>Written by Daniel Cisneros Siliezar</p>
 
-    <img src="../images/use-agile.png">
+    <img src="../images/Waterfall-VS-Agile.jpg">
 
     <p>
       Agile is an effective approach to software development that has its perks when utilized correctly. 
