link to homepage

--- a/pages/template.html
+++ b/pages/template.html
@@ -8,12 +8,13 @@
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../styles/default.css">
+  <link rel="stylesheet" type="text/css" href="../styles/article.css">
 
   <script defer src="scripts/search.js"></script>
 </head>
 <body>
   <header>
-    <h1>IT Project Management Knowledge Areas</h1>
+    <a href="/it-project-management/index.html"><h1>IT Project Management Knowledge Areas</h1></a>
 
     <form class="search">
       <input class="search" type="text">
