--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <header>
-    <h1>IT Project Management Knowledge Areas</h1>
+    <a href="/it-project-management/index.html"><h1>IT Project Management Knowledge Areas</h1></a>
 
     <form class="search">
       <input class="search" type="text">
