added content to agile vs waterfall

--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -82,6 +82,29 @@
         <ul>The project can take longer to deliver as all stages must be completed before the application can be ready.
         </ul>
 
+        <p>It was due to these challenges with the Waterfall methodology, that new alternatives started emerging, with
+            one of the most popular choices being the Agile methodology.</p>
+
+        <h3>Agile Methodologies</h3>
+        <p>An Agile methodology is an iterative form of project management, where the project is divided
+            into “sprints”. Indeed, this methodology allows for changes in requirements throughout the life
+            of the application as more information and feedback is received. A small part of conceptualizing,
+            designing, developing and maintenance is included in every sprint. This also allows for a “minimum viable
+            product” to be delivered, which is a pre-mature yet usable implementation of the application. This means
+            that the project can be completed quicker as changes can easily be introduced in the next sprint. </p>
+
+        <h4>Types of Agile Methodologies</h4>
+        <p>There are many different kinds of Agile methodologies, such as Scrum, Extreme Programming and Test-Driven
+            Development, which are more popular than others. </p>
+
+        <h5>Scrum:</h5>
+        <p>Scrum, originally a rugby term abbreviated from scrummage, is a kind of methodology which makes use of
+            stopping and restarting the project “sprints”. It has fairly short development cycles, commonly around 30
+            days. The output of each cycle should be a deliverable.</p>
+
+
+
+
 
     </main>
 
