--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -46,7 +46,8 @@
             <img src="../images/Agile-Vs-Waterfall-chart.jpg" alt="A chart comparing the different
         stages of Agile methodology to Waterfall methodology, where Waterfall is all one after another and Agile has a little of all
         within one stage.">
-            <figcaption>A chart comparing Agile and Waterfall. <a
+            <figcaption><strong>Figure 1</strong>: A chart comparing the different project stages in Agile and
+                Waterfall. <a
                     href="https://upload.wikimedia.org/wikipedia/commons/5/50/Waterfall_vs_agile.pdf ">(Source)</a>
             </figcaption>
         </figure>
@@ -102,9 +103,54 @@
             stopping and restarting the project “sprints”. It has fairly short development cycles, commonly around 30
             days. The output of each cycle should be a deliverable.</p>
 
+        <h5>Extreme Programming:</h5>
+        <p>Although extreme programming sounds like a programmer may be required to have an adrenaline rush while
+            programming, its not so. Extreme programming is a highly change-based programming approach. A pair of
+            programmers work together on implementing customer specifications early on. Then, the application is put
+            through tests derived from the customer to see if it is satisfactory. Requirements determining is not as
+            significant as requirements can easily be changed later on. It also dedicates a refactoring stage to make
+            sure the code is free of unwanted functions that may be obsolete or otherwise not useful.</p>
 
+        <h5>Test-Driven Development:</h5>
+        <p>Test-driven development relies on tests to be written first before any actual production code. This means
+            that when production code is written, the tests will fail any improper code immediately, and the code will
+            be returned to be fixed. Like other Agile methodologies, the project is broken into short stages. This
+            allows for more efficient and robust code, even though it may take more time as other agile approaches,
+            since tests need to be designed before development. Also, code fixes during the new development period are
+            easier to implement than if they were pushed during maintenance.</p>
 
+        <h4>Agile methodologies gained popularity thanks to their benefits, such as:</h4>
+        <ul>Much more flexible: allow for changes to occur early and later on without a high cost.</ul>
+        <ul>Speeds up development: allows the delivery of a product to be done earlier on and uses feedback to improve
+            requirements.</ul>
+        <ul>More feedback means that there is a lesser risk of project failure.</ul>
+        <ul>Promotes innovation.</ul>
 
+        <h4>Some issues surrounding the Agile approach are:</h4>
+        <ul>Unclear requirements. The requirements are ever changing throughout the project process.</ul>
+        <ul>It may not be the best for larger projects.</ul>
+        <ul>It allows for process and communication conflicts.</ul>
+
+        <h3>Now that you are acquainted with the aforementioned methodologies, how do you decide what to choose? </h3>
+        <p>We observe that for a given project, where one methodology lacks, another methodology has the potential to
+            excel. The advantages and disadvantages of Waterfall and Agile methodologies is what helps determine which
+            methodology to use in a given project. Larger, more distributed projects will benefit from using the
+            Waterfall methodology, since Agile methodologies are weak for larger projects. Meanwhile, Agile projects
+            will work wonderfully for relatively smaller projects, and better allow for innovation. If the requirements
+            are well known in the beginning of the project, the Waterfall method may be a better option. On the other
+            hand, if requirements are not well defined in the beginning, an Agile approach would be the way to go.</p>
+
+        <figure><img src="../images/Agile-vs-Waterfall-infographic.png"
+                alt="An infographic containing a table comparing Agile and Waterfall side by side. Constraints, structure and testing are compared">
+            <figcaption><strong>Figure 2</strong>: compares the key differences between the Waterfall and Agile
+                methodologies.</figcaption>
+        </figure>
+
+        <h3>Conclusion</h3>
+        <p>Since in the world of project management there is no such methodology that is “one size fit all”, there are a
+            variety of methodologies available to choose from, each with their own advantages and disadvantages.
+            Therefore, in order to choose between Waterfall and Agile, all aspects of the project must be evaluated to
+            determine which methodology suits it.</p>
 
     </main>
 
