--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -152,6 +152,9 @@
             Therefore, in order to choose between Waterfall and Agile, all aspects of the project must be evaluated to
             determine which methodology suits it.</p>
 
+        <br>
+        <p>Written by: Irzem Ahmed</p>
+
     </main>
 
     <footer>
