--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -153,7 +153,7 @@
             determine which methodology suits it.</p>
 
         <br>
-        <p>Written by: Irzem Ahmed</p>
+        <p>Written by: Irzem Ahmedf</p>
 
     </main>
 
