--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -25,7 +25,7 @@
 
   <main>
     <h2>The 12 Principles of Agile Development</h2>
-    <p>Written by: Kaleb Dean</p>
+    <p>By: Kaleb Dean</p>
 
     <img src="../images/12-agile-principles.png">
 
