--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -16,9 +16,9 @@
 
 <body>
     <header>
-        <a href="/it-project-management/index.html">
-            <h1>IT Project Management Knowledge Areas</h1>
-        </a>
+        <h1> href="/it-project-management/index.html">
+            <a href="/it-project-management/index.html">IT Project Management</a>
+        </h1>
 
         <form class="search">
             <input class="search" type="text">
