--- a/pages/benefits-agile.html
+++ b/pages/benefits-agile.html
@@ -16,9 +16,9 @@
 
 <body>
     <header>
-        <a href="/it-project-management/index.html">
-            <h1>IT Project Management Knowledge Areas</h1>
-        </a>
+        <h1>
+            <a href="/it-project-management/index.html">IT Project Management</a>
+        </h1>
 
         <form class="search">
             <input class="search" type="text">
@@ -36,8 +36,7 @@
             <p><strong>What is Agile?</strong></p>
             <p>
                 Agile is a methodology that is used in project management and software development. This methodology is
-                an
-                approach that can help teams take many iterative and incremental steps that can help create a project.
+                an approach that can help teams take many iterative and incremental steps that can help create a project.
                 These
                 iterative and incremental steps are all short-term and produce a prototype after each cycle. During each
                 cycle, there also will be more innovations for the project that makes each feature more efficient. There
