--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -13,7 +13,9 @@
 </head>
 <body>
   <header>
-    <a href="/it-project-management/index.html"><h1>IT Project Management Knowledge Areas</h1></a>
+    <h1>
+      <a href="/it-project-management/index.html">IT Project Management</a>
+    </h1>
 
     <form class="search">
       <input class="search" type="text">
