--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -15,7 +15,9 @@
 </head>
 <body>
   <header>
-    <a href="/it-project-management/index.html"><h1>IT Project Management Knowledge Areas</h1></a>
+    <h1>
+      <a href="/it-project-management/index.html">IT Project Management Knowledge Areas</a>
+    </h1>
 
     <form class="search">
       <input class="search" type="text">
