--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <form class="search">
       <input class="search" type="text">
-      <input type="submit" value="search">
+      <input type="submit" value="">
     </form>
   </header>
 
@@ -39,8 +39,14 @@
   </main>
 
   <span class="homepage-flag"></span>
+
   <footer>
-    Daniel Cisneros Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
+    <p>This site was built by Kaleb Dean, Daniel Cisneros Siliezar, Irzem Ahmed, and Shawn Kiruba</p>
+    
+    <ul>
+      <p>Icons from <a href="https://icons8.com">Icons8</a></p>
+      <li><a target="_blank" href="https://icons8.com/icon/43719/search">Search</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+    </ul>
   </footer>
 
 </body>
