set search submit value to ""

--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -19,7 +19,7 @@
 
     <form class="search">
       <input class="search" type="text">
-      <input type="submit" value="search">
+      <input type="submit" value="">
     </form>
   </header>
 
