--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -21,7 +21,7 @@
 
     <form class="search">
       <input class="search" type="text">
-      <input type="submit" value="search">
+      <input type="submit" value="">
     </form>
   </header>
 
