--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -22,7 +22,7 @@
 
         <form class="search">
             <input class="search" type="text">
-            <input type="submit" value="search">
+            <input type="submit" value="">
         </form>
     </header>
 
