--- a/pages/template.html
+++ b/pages/template.html
@@ -20,7 +20,7 @@
     
     <form class="search">
       <input class="search" type="text">
-      <input type="submit" value="search">
+      <input type="submit" value="">
     </form>
   </header>
 
