--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -16,7 +16,7 @@
 <body>
   <header>
     <h1>
-      <a href="/it-project-management/index.html">IT Project Management Knowledge Areas</a>
+      <a href="/it-project-management/index.html">IT Project Management</a>
     </h1>
 
     <form class="search">
