migrated script.js

--- a/pages/agile-vs-waterfall.html
+++ b/pages/agile-vs-waterfall.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" type="text/css" href="../styles/default.css">
     <link rel="stylesheet" type="text/css" href="../styles/article.css">
 
-    <script defer src="scripts/search.js"></script>
+    <script defer src="../js/script.js"></script>
 </head>
 
 <body>
