--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" type="text/css" href="./styles/default.css">
   <link rel="stylesheet" type="text/css" href="./styles/home.css">
 
-  <script defer src="script.js"></script>
+  <script defer src="./js/script.js"></script>
 </head>
 <body>
   <header>
