--- a/pages/template.html
+++ b/pages/template.html
@@ -34,7 +34,12 @@
   </main>
 
   <footer>
-    Daniel Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
+    <p>This site was built by Kaleb Dean, Daniel Cisneros Siliezar, Irzem Ahmed, and Shawn Kiruba</p>
+    
+    <ul>
+      <p>Icons from <a href="https://icons8.com">Icons8</a></p>
+      <li><a target="_blank" href="https://icons8.com/icon/43719/search">Search</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+    </ul>
   </footer>
 </body>
 </html>
