--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <header>
     <h1>
-      <a href="/it-project-management/index.html">IT Project Management</a>
+      <a href="/it-project-management/index.html"><img src="./images/logo.png" width="400" height="400"></a>
     </h1>
 
     <form class="search">
