adding logo on every html page

--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,10 +12,11 @@
 
   <script defer src="../js/script.js"></script>
 </head>
+
 <body>
   <header>
     <h1>
-      <a href="/it-project-management/index.html">IT Project Management</a>
+      <a href="/it-project-management/index.html"><img src="./images/logo.png" width="400" height="400"></a>
     </h1>
 
     <form class="search">
@@ -30,50 +32,98 @@
     <img src="../images/Waterfall-VS-Agile.jpg">
 
     <p>
-      Agile is an effective approach to software development that has its perks when utilized correctly. 
-      Organizations and companies must know the importance of when to use or not use the principles of Agile into their products. 
-      Using the methodology when unnecessary can lead to a waste of time and resources for the organization (and vice versa). 
-      It is important to go over several of the reasons and scenarios on when to use and not use Agile methodologies. 
-    </p>  
+      Agile is an effective approach to software development that has its perks when utilized correctly.
+      Organizations and companies must know the importance of when to use or not use the principles of Agile into their
+      products.
+      Using the methodology when unnecessary can lead to a waste of time and resources for the organization (and vice
+      versa).
+      It is important to go over several of the reasons and scenarios on when to use and not use Agile methodologies.
+    </p>
     <ol>
-    
-      <li><strong>The first reason not to use Agile practices is if the project is not required to be completed in a timely manner and/or not as complex to complete.</strong></li>
+
+      <li><strong>The first reason not to use Agile practices is if the project is not required to be completed in a
+          timely manner and/or not as complex to complete.</strong></li>
       <p>
-        The methodologies of Agile are best suited for more complicated and larger projects that are demanded by the client. 
-        If the development team is working on a simple project, they would be better off adopting a Waterfall approach to completing the project. 
-        With simpler projects, there will be better defined goals and less changing requirements to deal with. 
-        The purpose of Agile is to make a neat and organized project development process that is highly adaptable to the ever-changing requirements made by the client. 
-        If the goal is clearly defined and given plenty of time to complete an assigned project, it is best to not utilize Agile approaches.
+        The methodologies of Agile are best suited for more complicated and larger projects that are demanded by the
+        client.
+        If the development team is working on a simple project, they would be better off adopting a Waterfall approach
+        to completing the project.
+        With simpler projects, there will be better defined goals and less changing requirements to deal with.
+        The purpose of Agile is to make a neat and organized project development process that is highly adaptable to the
+        ever-changing requirements made by the client.
+        If the goal is clearly defined and given plenty of time to complete an assigned project, it is best to not
+        utilize Agile approaches.
       </p>
-      <li><strong>The team is not well-educated on Agile and/or the organization does not invest in teaching Agile methodology for their developers and managers.</strong></li>
+      <li><strong>The team is not well-educated on Agile and/or the organization does not invest in teaching Agile
+          methodology for their developers and managers.</strong></li>
       <p>
-        In order to effectively practice Agile methodologies, it is important that a well-versed team knows how to carry out the tasks of Agile. The process will require many crucial decisions made by team members, and if the team members are not well-versed or capable enough, it would cause catastrophe to the project or product. Agile requires constant collaboration between the client, management, development team, and anyone else involved in the project. One team that does not pull their own weight will greatly affect the quality of the final product. 
-        It can be even worse if the organization does not invest its time and resources to train their teams about Agile methodologies. Some organizations have a preference for clients that prefer traditional development methodologies. If the organizations that do not practice Agile do land a client that wants to work in Agile, they will find that the resources and interaction base for a successful Agile project would be almost nonexistent. 
+        In order to effectively practice Agile methodologies, it is important that a well-versed team knows how to carry
+        out the tasks of Agile. The process will require many crucial decisions made by team members, and if the team
+        members are not well-versed or capable enough, it would cause catastrophe to the project or product. Agile
+        requires constant collaboration between the client, management, development team, and anyone else involved in
+        the project. One team that does not pull their own weight will greatly affect the quality of the final product.
+        It can be even worse if the organization does not invest its time and resources to train their teams about Agile
+        methodologies. Some organizations have a preference for clients that prefer traditional development
+        methodologies. If the organizations that do not practice Agile do land a client that wants to work in Agile,
+        they will find that the resources and interaction base for a successful Agile project would be almost
+        nonexistent.
       </p>
-      <li><strong>The clients and teams are not wanting to partake in working together for the project or interested in using Agile for their project.</strong></li>
+      <li><strong>The clients and teams are not wanting to partake in working together for the project or interested in
+          using Agile for their project.</strong></li>
       <p>
-        The utilization of Agile needs interaction between clients and teams involved with the project. Teams are expected to give helpful feedback and updates about the project to the clients. Teams are also expected to work with each other frequently and provide feedback to help advance in the project. If the client is not available to work with the project teams or if the teams do not wish to frequently collaborate with each other, then it is best to use a different approach other than Agile to complete the project assigned. It is also important to know that project teams and clients may agree that Agile is not the best approach to completing a given project. There can be a variety of reasons to reject the use of Agile, whether it is due to personal reasons or clients that want to remain in control of their projects. It is imperative that Agile is not utilized where there is no use for the approach.
+        The utilization of Agile needs interaction between clients and teams involved with the project. Teams are
+        expected to give helpful feedback and updates about the project to the clients. Teams are also expected to work
+        with each other frequently and provide feedback to help advance in the project. If the client is not available
+        to work with the project teams or if the teams do not wish to frequently collaborate with each other, then it is
+        best to use a different approach other than Agile to complete the project assigned. It is also important to know
+        that project teams and clients may agree that Agile is not the best approach to completing a given project.
+        There can be a variety of reasons to reject the use of Agile, whether it is due to personal reasons or clients
+        that want to remain in control of their projects. It is imperative that Agile is not utilized where there is no
+        use for the approach.
       </p>
-      <li><strong>The last reason why utilizing Agile methodologies would not be ideal would be if the client requires approvals or documentation per increment of development.</strong></li>
+      <li><strong>The last reason why utilizing Agile methodologies would not be ideal would be if the client requires
+          approvals or documentation per increment of development.</strong></li>
       <p>
-        If the project teams are working with bureaucratic organizations or clients that strongly believe in other, more traditional methodologies, then it is best to not use Agile in these instances. Having to submit a detailed report of each cycle or stage of the development process would be best for supporting processes over an extended period of time. These scenarios would best work under the Waterfall approaches to completing projects, not Agile. Having to acquire approvals for each stage of the development process would mitigate any sort of momentum that is currently going for the project, so it is best to use more traditional approaches than Agile.
+        If the project teams are working with bureaucratic organizations or clients that strongly believe in other, more
+        traditional methodologies, then it is best to not use Agile in these instances. Having to submit a detailed
+        report of each cycle or stage of the development process would be best for supporting processes over an extended
+        period of time. These scenarios would best work under the Waterfall approaches to completing projects, not
+        Agile. Having to acquire approvals for each stage of the development process would mitigate any sort of momentum
+        that is currently going for the project, so it is best to use more traditional approaches than Agile.
       </p>
-      <li><strong>The first reason to use and practice Agile methodologies is that it reduces maintenance tasks.</strong></li>
+      <li><strong>The first reason to use and practice Agile methodologies is that it reduces maintenance
+          tasks.</strong></li>
       <p>
-        Agile reduces the amount of tasks required to support the product. These tasks may include testing and debugging of the product during the development process. If the teams are using traditional approaches to the product, these tasks can quickly increase just to keep pace with the timeline of the project. In Agile development, defects or other maintenance tasks are put into the product backlog. This backlog is reviewed during the sprint planning sessions held during the development process, which means new opportunities to resolve issues or add new features to the product.
+        Agile reduces the amount of tasks required to support the product. These tasks may include testing and debugging
+        of the product during the development process. If the teams are using traditional approaches to the product,
+        these tasks can quickly increase just to keep pace with the timeline of the project. In Agile development,
+        defects or other maintenance tasks are put into the product backlog. This backlog is reviewed during the sprint
+        planning sessions held during the development process, which means new opportunities to resolve issues or add
+        new features to the product.
       </p>
-      <li><strong>Agile can quickly adapt to any sort of changes that come throughout the development process.</strong></li>
+      <li><strong>Agile can quickly adapt to any sort of changes that come throughout the development process.</strong>
+      </li>
       <p>
-        Agile development recognizes that the needs of the client can change over time and well-versed teams must be able to adapt to accommodate those changes. Teams would not have to wait on review or approval processes; they can just add tasks to the backlog and allocate those tasks when a new sprint comes based on the priorities and needs of the client. 
+        Agile development recognizes that the needs of the client can change over time and well-versed teams must be
+        able to adapt to accommodate those changes. Teams would not have to wait on review or approval processes; they
+        can just add tasks to the backlog and allocate those tasks when a new sprint comes based on the priorities and
+        needs of the client.
       </p>
-      <li><strong>The last reason why Agile development can be utilized is that the approach is an effective way to enhance project control.</strong></li>
+      <li><strong>The last reason why Agile development can be utilized is that the approach is an effective way to
+          enhance project control.</strong></li>
       <p>
-        Teams collaborate with each other to find out what occurs in each sprint. This ensures that the collaborating teams are up to date and knows what tasks need to be completed at hand. Standup meetings are daily and ensure everyone knows the current state of the project, as well as the ability to address issues quickly. Lastly, teams are transparent with each other and can adapt quickly to changing circumstances, which result in the completion of maintenance tasks, higher client satisfaction, and a better quality product.
+        Teams collaborate with each other to find out what occurs in each sprint. This ensures that the collaborating
+        teams are up to date and knows what tasks need to be completed at hand. Standup meetings are daily and ensure
+        everyone knows the current state of the project, as well as the ability to address issues quickly. Lastly, teams
+        are transparent with each other and can adapt quickly to changing circumstances, which result in the completion
+        of maintenance tasks, higher client satisfaction, and a better quality product.
       </p>
-      
+
     </ol>
     <p>
-        Agile has its pros and cons that vary between projects. It is imperative that organizations and teams are aware of when to utilize Agile methodologies to complete projects, as it can lead to a better product all around or potentially ruin the final product based on given requirements.
+      Agile has its pros and cons that vary between projects. It is imperative that organizations and teams are aware of
+      when to utilize Agile methodologies to complete projects, as it can lead to a better product all around or
+      potentially ruin the final product based on given requirements.
     </p>
     <section className="resources">
       <h3>Resources</h3>
@@ -88,4 +138,5 @@
     Daniel Cisneros Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
   </footer>
 </body>
+
 </html>
