--- a/pages/template.html
+++ b/pages/template.html
@@ -19,7 +19,7 @@
     </h1>
     
     <form class="search">
-      <input class="search" type="text">
+      <input class="search" type="text" placeholder="search">
       <input type="submit" value="">
     </form>
   </header>
