adding search placeholder

--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   <span class="homepage-flag"></span>
 
   <footer>
-    <p>This site was built by Kaleb Dean, Daniel Cisneros Siliezar, Irzem Ahmed, and Shawn Kiruba</p>
-    
-    <ul>
-      <p>Icons from <a href="https://icons8.com">Icons8</a></p>
-      <li><a target="_blank" href="https://icons8.com/icon/43719/search">Search</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
-    </ul>
+    <div>
+      <ul>
+        <p>Icons from <a href="https://icons8.com">Icons8</a></p>
+        <li><a target="_blank" href="https://icons8.com/icon/43719/search">Search</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+      </ul>
+    </div>
   </footer>
 
 </body>
