--- a/pages/benefits-agile.html
+++ b/pages/benefits-agile.html
@@ -21,7 +21,7 @@
         </h1>
 
         <form class="search">
-            <input class="search" type="text">
+            <input class="search" type="text" placeholder="search">
             <input type="submit" value="">
         </form>
     </header>
@@ -36,7 +36,8 @@
             <p><strong>What is Agile?</strong></p>
             <p>
                 Agile is a methodology that is used in project management and software development. This methodology is
-                an approach that can help teams take many iterative and incremental steps that can help create a project.
+                an approach that can help teams take many iterative and incremental steps that can help create a
+                project.
                 These
                 iterative and incremental steps are all short-term and produce a prototype after each cycle. During each
                 cycle, there also will be more innovations for the project that makes each feature more efficient. There
