--- a/pages/template.html
+++ b/pages/template.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,15 +10,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" type="text/css" href="../styles/default.css">
   <link rel="stylesheet" type="text/css" href="../styles/article.css">
+  
 
   <script defer src="../js/script.js"></script>
+  <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
 </head>
+
 <body>
   <header>
     <h1>
       <a href="/it-project-management/index.html"><img src="../images/logo.png" width="400" height="400"></a>
     </h1>
-    
+
     <form class="search">
       <input class="search" type="text" placeholder="search">
       <input type="submit" value="">
@@ -34,12 +38,18 @@
   </main>
 
   <footer>
-    <p>This site was built by Kaleb Dean, Daniel Cisneros Siliezar, Irzem Ahmed, and Shawn Kiruba</p>
-    
-    <ul>
-      <p>Icons from <a href="https://icons8.com">Icons8</a></p>
-      <li><a target="_blank" href="https://icons8.com/icon/43719/search">Search</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
-    </ul>
+    <div>
+      <ul>
+        <li><a class="font-2rem">&copy; IT Project Management</a></li>
+        <li><a class="font-2rem">About</a></li>
+        <li><a class="font-2rem">Contact</a></li>
+      </ul>
+      <ul>
+        <li><a><i class="fa-brands fa-twitter font-2rem"></i></a></li>
+        <li><a><i class="fa-brands fa-facebook font-2rem"></i></a></li>
+      </ul>
+    </div>
   </footer>
 </body>
+
 </html>
