Adding footer to main page

--- a/index.html
+++ b/index.html
@@ -43,8 +43,13 @@
   <footer>
     <div>
       <ul>
-        <p>Icons from <a href="https://icons8.com">Icons8</a></p>
-        <li><a target="_blank" href="https://icons8.com/icon/43719/search">Search</a> icon by <a target="_blank" href="https://icons8.com">Icons8</a></li>
+        <li><a class="font-2rem">&copy; IT Project Management</a></li>
+        <li><a class="font-2rem">About</a></li>
+        <li><a class="font-2rem">Contact</a></li>
+      </ul>
+      <ul>
+        <li><a><i class="fa-brands fa-twitter font-2rem"></i></a></li>
+        <li><a><i class="fa-brands fa-facebook font-2rem"></i></a></li>
       </ul>
     </div>
   </footer>
