copied footer to all pages

--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -221,7 +221,17 @@
   </main>
 
   <footer>
-    Daniel Cisneros Siliezar, Irzem Ahmed, Shawn Kiruba, Kaleb Dean
+    <div>
+      <ul>
+        <li><a class="font-2rem">&copy; IT Project Management</a></li>
+        <li><a class="font-2rem">About</a></li>
+        <li><a class="font-2rem">Contact</a></li>
+      </ul>
+      <ul>
+        <li><a><i class="fa-brands fa-twitter font-2rem"></i></a></li>
+        <li><a><i class="fa-brands fa-facebook font-2rem"></i></a></li>
+      </ul>
+    </div>
   </footer>
 </body>
 </html>
