sprint 1 week 1 user story 1

--- a/pages/benefits-agile.html
+++ b/pages/benefits-agile.html
@@ -5,12 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>IT Project Management</title>
+    <title>IT Project Management | Benefits of Agile Methodology</title>
 
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="../styles/default.css">
     <link rel="stylesheet" type="text/css" href="../styles/article.css">
 
+    <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
     <script defer src="../js/script.js"></script>
 </head>
 
