--- a/pages/use-agile.html
+++ b/pages/use-agile.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" type="text/css" href="../styles/default.css">
   <link rel="stylesheet" type="text/css" href="../styles/article.css">
 
+  <script defer src="https://kit.fontawesome.com/bb88c945f0.js" crossorigin="anonymous"></script>
   <script defer src="../js/script.js"></script>
 </head>
 
