--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 
   <main>
     <section class="search-results">
-      <h3 class="search-results"></h3>
+      <h2 class="search-results"></h3>
+      <button class='close-search-results'>X</button>
       <div class="search-results"></div>
     </section>
 
