Adding references for user story 3

--- a/pages/scope-definition.html
+++ b/pages/scope-definition.html
@@ -124,6 +124,15 @@
     <p>
         In summary, Agile project managers should be able to define the scope for a given project. They must use the tools of expert judgment, data analysis, interpersonal and team skills, decision making, and product analysis to effectively define their project scope. Lastly, project managers should be able to communicate the scope definition in documentation, such as providing a project charter and project scope statement. This information can be used to list out the information of the project, overall deliverables, and characteristics of products produced as part of the project to the project team and stakeholders, so that everyone has the same understanding of the project. By providing a good definition of the project scope, project managers will be able to adapt accordingly and complete the project by the deadline, as well as satisfying the team and customer in the process. 
     </p>
+
+    <h3>References</h3>
+    <ul>
+        <p>A lot of this information comes from the textbook listed below, but not plagiarized</p>
+        <li>Information Technology Project Management: Kathy Schwable 9th Edition</li>
+        <li><a href="https://asana.com/resources/expert-judgment">Expert Judgment</a></li>
+        <li><a href="https://executiveacademy.at/en/news/detail/the-importance-of-data-analysis-in-project-management-explained-for-those-in-business-school">Data Analysis</a></li>
+        <li><a href="https://www.simplilearn.com/project-manager-interpersonal-skills-article">Interpersonal Skills</a></li>
+    </ul>
 </main>
 
   <footer>
