sprint 1 week 2 user story 1

--- a/pages/12-agile-principles.html
+++ b/pages/12-agile-principles.html
@@ -28,7 +28,7 @@
 
   <main>
     <h2>The 12 Principles of Agile Development</h2>
-    <p>By: Kaleb Dean</p>
+    <p>By Kaleb Dean</p>
 
     <img src="../images/12-agile-principles.png">
 
