--- a/pages/agile-scope-management-importance.html
+++ b/pages/agile-scope-management-importance.html
@@ -31,6 +31,7 @@
 
   <main>
     <h2>Importance of Agile Scope Management</h2>
+    <p>By Kaleb Dean</p>
 
     <img src="../images/scope-importance-1.jpg" class="main-img">
 
