--- a/pages/activities-schedule-basis.html
+++ b/pages/activities-schedule-basis.html
@@ -32,7 +32,7 @@
     <h2>Activities: The Basis of Developing a Project Schedule</h2>
     <p>By Kaleb Dean</p>
 
-    <img src="./images/activities-schedule-basis.jpeg">
+    <img src="../images/activities-schedule-basis.jpeg">
 
     <p>As an agile project manager, activities will make your schedule development process a lot easier. This article will help you understand the importance of activities as the basis of developing project schedules by answering the following questions:</p>
     <ul>
