sprint 2 week 1 user story 1

--- a/pages/template.html
+++ b/pages/template.html
@@ -31,7 +31,7 @@
   <main>
     <h2>Article Title</h2>
 
-    <!--<img src="./images/article-img">-->
+    <!--<img src="../images/article-img">-->
 
     <p></p>
     <p></p>
