Forgot to add a by statement

--- a/pages/project-quality-management-meaning.html
+++ b/pages/project-quality-management-meaning.html
@@ -30,6 +30,7 @@
 
   <main>
     <h2>Project Quality Management - Basic Defintion and Importance</h2>
+    <p>By: Daniel Cisneros Siliezar</p>
 
     <figure>
         <img src="../images/pqm-diagram.jpeg" width="60%">
